Fix route to favicon.ico
Attempt to debug deployment issues with Heroku by fixing route the favicon.ico

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
         <link rel="icon" type="image/png" href="static/favicons/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="static/favicons/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="static/favicons/favicon-128.png" sizes="128x128" />
-        <meta name="application-name" content="static/favicons/&nbsp;"/>
+        <meta name="application-name" content="static/favicons/favicon.ico"/>
         <meta name="msapplication-TileColor" content="static/favicons/#FFFFFF" />
         <meta name="msapplication-TileImage" content="static/favicons/mstile-144x144.png" />
         <meta name="msapplication-square70x70logo" content="static/favicons/mstile-70x70.png" />
