--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 {% block main %}
 
     <h1 class="cover-heading">why, hello there <a class="wink" href=""></a></h1>
-    <p class="lead">Welcome to my website! I'm glad you're here. Please, take off your shoes and make yourself comfortable. Or don't. That's cool too.</p>
+    <p class="lead">Welcome to my website! I'm glad you're here. Please, take off your shoes and make yourself comfortable. Or don't. That's cool, too.</p>
     <p class="lead">I made this website to satisfy the requirements of pset8 in the CS50x course offered on edX
         , but it seems like it could be a good place to call home hereafter... At any rate, feel free to look around!</p>
     <div class="mtop-auto lead">
