--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,11 +2,12 @@
 
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover, shrinktofit=no">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <link href="static/styles.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrinktofit=no">
         <meta name="author" content="Daniel DiCocco, Mark Otto, Jacob Thornton, and Bootstrap contributors">
         <meta name="generator" content="Jekyll v4.1.1">
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="static/favicons/apple-touch-icon-57x57.png" />
@@ -22,7 +23,7 @@
         <link rel="icon" type="image/png" href="static/favicons/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="static/favicons/favicon-16x16.png" sizes="16x16" />
         <link rel="icon" type="image/png" href="static/favicons/favicon-128.png" sizes="128x128" />
-        <meta name="application-name" content="static/favicons/favicon.ico"/>
+        <meta name="application-name" content="static/favicons/&nbsp;"/>
         <meta name="msapplication-TileColor" content="static/favicons/#FFFFFF" />
         <meta name="msapplication-TileImage" content="static/favicons/mstile-144x144.png" />
         <meta name="msapplication-square70x70logo" content="static/favicons/mstile-70x70.png" />
