Update intro paragraph language

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@
 {% block main %}
 
     <h1 class="cover-heading">why, hello there <a class="wink" href=""></a></h1>
-    <p class="lead">Welcome to my website! I'm glad you're here. Please, take off your shoes and make yourself comfortable. Or don't. That's cool, too.</p>
-    <p class="lead">I made this website to satisfy the requirements of pset8 in the CS50x course offered on edX
-        , but it seems like it could be a good place to call home hereafter... At any rate, feel free to look around!</p>
+    <p class="lead">Welcome to my website! I'm glad you're here. Please, take off your shoes and make yourself comfortable.</p>
+    <p class="lead">Originally, this was made to satisfy the requirements of CS50x, but it has grown into my personal 
+        homepage. Feel free to look around!</p>
     <div class="mtop-auto lead">
             <a href="/aboutme"><input type="button" value="Learn More" class="btn btn-lg btn-secondary"></a>
     </div>
