Update contact info and minor spacing change

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,7 +35,9 @@
 
 {% block main %}
     <h1 class="cover-heading" style="margin-bottom: 2rem;">Contact</h1>
-    <p style="margin-bottom: 2rem;">I'm not big on social media, but you can reach me on <span><a href="https://discord.com/">Discord</a></span> @ ToastyTortilla#7850</p>
+    <p style="margin-bottom: 3rem;">I'm not big on social media, but you can reach me on 
+        <span><a href="www.linkedin.com/in/daniel-dicocco">LinkedIn</a></span> and
+        <span><a href="https://discord.com/">Discord</a></span> as davindico</p>
 
     <h4 style="margin-bottom: 2rem;">Before you go, say hello!</h4>
     <p>You came all this way right? You might as well say "hey".</p>
