Edit info, update photos, adjust spacing

--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -35,37 +35,37 @@
                       <div class="carousel-item active">
                         <img src="static/photos/marcie_dan_illustrator.jpg" class="d-block w-100 rounded" alt="My fiance and I.">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="carousel-title">My Fiancée and I!</h5>
+                          <h5 class="carousel-title">My Wife and I</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="static/photos/meerkat_conan.jpg" class="d-block w-100 rounded" alt="Meerkat and Conan, my dogs!">
+                        <img src="static/photos/meerkat.png" class="d-block w-100 rounded" alt="A picture of my Chihuahua">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="carousel-title">Meerkat and Conan!</h5>
+                          <h5 class="carousel-title">Meerkat!</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="static/photos/snoopy.jpg" class="d-block w-100 rounded" alt="Snoopy, my other dog!">
+                        <img src="static/photos/badger.png" class="d-block w-100 rounded" alt="A picture of my Dachshund">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="carousel-title">Snoopy!</h5>
+                          <h5 class="carousel-title">Badger!</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="static/photos/ski.gif" class="d-block w-100 rounded" alt="A gif of me skiing in winter 2021.">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="carousel-title">Ski the East!</h5>
+                          <h5 class="carousel-title">Ski the East</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="static/photos/skiing.jpg" class="d-block w-100 rounded" alt="My friends and I on a ski trip in Colorado">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="carousel-title">Ski the West!</h5>
+                          <h5 class="carousel-title">Ski the West</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="static/photos/horn.jpg" class="d-block w-100 rounded" alt="My colleagues and I peforming orchestral music in Michigan.">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5 class="carousel-title">Making Music!</h5>
+                          <h5 class="carousel-title">Making Music</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
@@ -85,9 +85,8 @@
                     </button>
                   </div>
                 </div>
-                <p class="small-text mbottom-auto">This is a short slideshow of the things that are the most
-                  important to me. Family is also really important to me, but I couldn't find a way to
-                  feature them in the slideshow without showing their faces.</p>
-                <p class="very-small-text">(hi mom! hi dad! I love you 😊)</p>
+                <p class="small-text mtop-auto mbottom-auto">This is a short slideshow of the things that are the most
+                  important to me. Family is also really important to me, but omitted for privacy reasons</p>
+                <p class="very-small-text">(hi mom!)</p>
 
 {% endblock %}
