Update phrasing for clarity and readability

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -30,7 +30,10 @@
           </h4>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <p class="bpad"><strong>Since we're here, we should start here!</strong> This website has been a fun project for me. The goal was to make a personal website. The most difficult part was navigating the intimdating vastness of the web dev world. To overcome this difficulty, I had to accept that my website won't (and shouldn't) be perfect on the first try and push myself to just learn new concepts one at a time.</p>
+              <p class="bpad"><strong>Since we're here, we should start here!</strong> This website has been a fun project for me. The initial goal was to make a simple website, 
+                but afterwards I converted it into a web app using Flask. The most difficult part was getting the website to look like what I prototyped and understanding how to
+                connect it to the Python backend. To overcome this difficulty, I had to dive into CSS and learn with Jinja to interface my Python program with the front end. 
+                I added some minor interactivity along the way which taught me to communicate with a SQLite database.</p>
             </div>
           </div>
         </div>
@@ -43,7 +46,11 @@
           </h4>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <p class="bpad"><strong>Recete was my submission as my final project for CS50.</strong> The objective was to build an entire application from the ground up. Back end, front end, and everything in between was my responsibility. While I faced countless challenges conceptualizing, planning, creating, and hosting this application, I also introduced some self-imposed difficulties by making the decision to completely divest myself from the CS50 library for the essential functions of the app. This meant that I was forced to learn the ins and outs of the Flask framework, SQLite module, and various other libraries in order to make the app fully functional in it's own right. Here's the  end result:<br/><a href="https://www.recete.app/" target="_blank">Recete</a></p>
+              <p class="bpad"><strong>Recete is a simple web app for managing receipts and tracking spending.</strong> The objective was to build an entire application from the ground 
+                up while solving a problem in my life. While I faced countless challenges conceptualizing, planning, creating, and hosting this application, I also introduced some 
+                self-imposed difficulties by making the decision to completely divest myself from the CS50 library for the essential functions of the app. 
+                This meant that I was forced to learn the ins and outs of the Flask framework, SQLite module, and various other libraries in order to make the app fully functional without
+                those training wheels. I'm quite proud of the end result:<br/><a href="https://www.recete.app/" target="_blank">Recete</a></p>
             </div>
           </div>
         </div>
@@ -56,7 +63,9 @@
           </h4>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <p class="bpad"><strong>Recover was a landmark assignment for me.</strong> The objective was to write a program in C that would recover 50 deleted .jpg photos from a .raw file. It was a challenge to understand how to read, write, and free memory in C. I'm extra proud of this assignment because it was the first one where I felt that I truly understood the required logic, it was proof that I was making progress.</p>
+              <p class="bpad"><strong>This was a challenging assignment from CS50x and a landmark assignment for me.</strong> The objective was to write a program in C that would recover 
+                50 deleted .jpg photos from a .raw file. It was a challenge to understand how to read, write, and free memory in C. I'm proud of my work here because it was the first time
+                 I felt that I truly understood the required logic, it was proof that I was making progress towards becoming a developer.</p>
             </div>
           </div>
         </div>
@@ -69,7 +78,10 @@
           </h4>
           <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <p class="bpad"><strong>Readability was suprisingly frustrating at first...</strong> The goal was to reconstruct a program we had written in C which would take text as input and return the approximate grade level of difficulty. Despite knowing the logic for the program and having some prior experience with Python, I quickly found that things <i>weren't as straightforward</i> as I assumed. Python can be powerful because of its abstraction, but it is still crucial to understand what is happening underneath the hood to make a well-designed program. Once I grasped what implicit assumptions Python and it's libraries were making, I was able to complete the project with relative ease.</p>
+              <p class="bpad"><strong>Readability was suprisingly frustrating at first...</strong> The goal was to reconstruct a program we had written in C which would take text as input 
+                and return the approximate grade level of difficulty, and convert it to Python. Despite knowing the logic for the program and having some prior experience with Python, 
+                I quickly found that things <i>weren't</i> as straightforward as I assumed. Python can be powerful because of its abstraction, but it is still crucial to understand what 
+                is happening underneath the hood to make a well-designed program. Once I grasped the implicit assumptions made by Python and it's libraries, I was able to complete the project with relative ease.</p>
             </div>
           </div>
         </div>
