Update titles and body text grammar

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -32,8 +32,8 @@
             <div class="accordion-body">
               <p class="bpad"><strong>Since we're here, we should start here!</strong> This website has been a fun project for me. The initial goal was to make a simple website, 
                 but afterwards I converted it into a web app using Flask. The most difficult part was getting the website to look like what I prototyped and understanding how to
-                connect it to the Python backend. To overcome this difficulty, I had to dive into CSS and learn with Jinja to interface my Python program with the front end. 
-                I added some minor interactivity along the way which taught me to communicate with a SQLite database.</p>
+                connect it to the Python backend. To overcome this difficulty, I had to dive into CSS and comb through the Flask documentation to interface my Python program with the front end. 
+                To extend my learning, I added some interactivity on the Contact page which taught me to communicate with a SQLite database.</p>
             </div>
           </div>
         </div>
@@ -41,16 +41,16 @@
         <div class="accordion-item">
           <h4 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed pad-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Final Project: Recete - Receipt Manager
+              Recete - Receipt Manager
             </button>
           </h4>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <p class="bpad"><strong>Recete is a simple web app for managing receipts and tracking spending.</strong> The objective was to build an entire application from the ground 
-                up while solving a problem in my life. While I faced countless challenges conceptualizing, planning, creating, and hosting this application, I also introduced some 
-                self-imposed difficulties by making the decision to completely divest myself from the CS50 library for the essential functions of the app. 
+                up while solving a problem in my life. While I faced countless roadblocks conceptualizing, planning, creating, and hosting this application, I also introduced some 
+                self-imposed challenges by making the decision to completely divest myself from the CS50 library for the essential functions of the app. 
                 This meant that I was forced to learn the ins and outs of the Flask framework, SQLite module, and various other libraries in order to make the app fully functional without
-                those training wheels. I'm quite proud of the end result:<br/><a href="https://www.recete.app/" target="_blank">Recete</a></p>
+                 training wheels. I'm quite proud of the end result:<br/><a href="https://www.recete.app/" target="_blank">Recete</a></p>
             </div>
           </div>
         </div>
