--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,7 +36,7 @@
 {% block main %}
     <h1 class="cover-heading" style="margin-bottom: 2rem;">Contact</h1>
     <p style="margin-bottom: 3rem;">I'm not big on social media, but you can reach me on 
-        <span><a href="www.linkedin.com/in/daniel-dicocco">LinkedIn</a></span> and
+        <span><a href="www.linkedin.com/in/daniel-dicocco">LinkedIn</a></span> here, and on 
         <span><a href="https://discord.com/">Discord</a></span> as davindico</p>
 
     <h4 style="margin-bottom: 2rem;">Before you go, say hello!</h4>
